--- a/.gitignore
+++ b/.gitignore
@@ -75,5 +75,5 @@ build-iPhoneSimulator/
 #Google calendar v3
 client_secrets.json
 token.yaml
-setting.yaml
+setting_calendar.yaml
 setting_drive.yaml
