新着ファイル通知バッチ追加とリファクタリング
push refected to heroku

deploy error

deploy error2

デプロイテスト

ファイル置き場を移動

コミット忘れ

コミット忘れ2

コミット忘れ3

コミット忘れ4

コミット忘れ5

コミット忘れ6

コミット忘れ7

コミット忘れ8

コミット忘れ9

コミット忘れ10

コミット忘れ11

コミット忘れ12

コミット忘れ13

コミット忘れ14

コミット忘れ15

--- a/.gitignore
+++ b/.gitignore
@@ -76,5 +76,6 @@ build-iPhoneSimulator/
 client_secrets.json
 token.yaml
 setting_calendar.yaml
-setting_drive.yaml
+setting_gdrive.yaml
 setting_photo.yaml
+setting_line_channel.yaml
