--- a/.gitignore
+++ b/.gitignore
@@ -75,12 +75,7 @@ build-iPhoneSimulator/
 #Google calendar v3
 client_secrets.json
 token.yaml
-setting_calendar.yaml
-<<<<<<< HEAD
+setting_gcalendar.yaml
 setting_gdrive.yaml
 setting_photo.yaml
 setting_line_channel.yaml
-=======
-setting_drive.yaml
-setting_photo.yaml
->>>>>>> master
