Update photo function from picasa to google photos api
Google Photos Api test

auth code debug

auth code debug2

auth code debug3

各APIのインスタンス化する記述の位置がおかしかったので修正

今日のワンコから今日のわんこに変更

--- a/.gitignore
+++ b/.gitignore
@@ -74,8 +74,4 @@ build-iPhoneSimulator/
 
 #Google calendar v3
 client_secrets.json
-token.yaml
-setting_gcalendar.yaml
-setting_gdrive.yaml
-setting_photo.yaml
-setting_line_channel.yaml
+linebot_setting_file.yaml
