--- a/config/database.yml
+++ b/config/database.yml
@@ -1,18 +1,12 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  adapter: postgresql
-  host: localhost
+  host: db
+  port: 5432
   encoding: utf8
   database: psgr_db
   username: postgres
